--- a/latex_thesis/bibliography/trial.bib
+++ b/latex_thesis/bibliography/trial.bib
@@ -20,6 +20,30 @@
 	file = {arXiv\:1111.3344 PDF:/Users/lorenzosperi/Zotero/storage/7NIL7Q7U/Löffler et al. - 2012 - The Einstein Toolkit A Community Computational In.pdf:application/pdf;arXiv.org Snapshot:/Users/lorenzosperi/Zotero/storage/HZHSNV99/1111.html:text/html}
 }
 
+@article{kiuchi_long-term_2009,
+	title = {Long-term general relativistic simulation of binary neutron stars collapsing to a black hole},
+	volume = {80},
+	issn = {1550-7998, 1550-2368},
+	url = {https://link.aps.org/doi/10.1103/PhysRevD.80.064037},
+	doi = {10.1103/PhysRevD.80.064037},
+	number = {6},
+	journaltitle = {Physical Review D},
+	author = {Kiuchi, Kenta and Sekiguchi, Yuichiro and Shibata, Masaru and Taniguchi, Keisuke},
+	urldate = {2018-04-18},
+	date = {2009-09-25},
+	langid = {english},
+	file = {Kiuchi et al. - 2009 - Long-term general relativistic simulation of binar.pdf:/Users/lorenzosperi/Zotero/storage/MEUCB5J8/Kiuchi et al. - 2009 - Long-term general relativistic simulation of binar.pdf:application/pdf}
+}
+
+
+@article{shibata_simulation_nodate,
+	title = {Simulation of merging binary neutron stars in full general relativity: ⌫Ä2 case},
+	pages = {18},
+	journaltitle = {{PHYSICAL} {REVIEW} D},
+	author = {Shibata, Masaru},
+	langid = {english},
+	file = {Shibata - Simulation of merging binary neutron stars in full.pdf:/Users/lorenzosperi/Zotero/storage/7M2Q5ZH2/Shibata - Simulation of merging binary neutron stars in full.pdf:application/pdf}
+}
 
 @article{weisberg_timing_2010,
 	title = {Timing Measurements of the Relativistic Binary Pulsar {PSR} B1913+16},
@@ -145,6 +169,14 @@
 	date = {2003-09-28}
 }
 
+@article{ferrari_quadrupole_nodate,
+	title = {{THE} {QUADRUPOLE} {FORMALISM} {APPLIED} {TO} {BINARY} {SYSTEMS}},
+	pages = {41},
+	author = {Ferrari, Valeria},
+	langid = {english},
+	file = {Ferrari - THE QUADRUPOLE FORMALISM APPLIED TO BINARY SYSTEMS.pdf:/Users/lorenzosperi/Zotero/storage/Y9PPDVVD/Ferrari - THE QUADRUPOLE FORMALISM APPLIED TO BINARY SYSTEMS.pdf:application/pdf}
+}
+
 @article{flanagan_basics_2005,
 	title = {The basics of gravitational wave theory},
 	volume = {7},
@@ -174,6 +206,188 @@
 	eprinttype = {arxiv},
 	eprint = {gr-qc/9506086},
 }
+
+@article{LIGOLaserInterferometer1992,
+  title = {{{LIGO}}: {{The Laser Interferometer Gravitational}}-{{Wave Observatory Author}}(s): {{Alex Abramovici}}, {{William E}}. {{Althouse}}, {{Ronald W}}. {{P}}. {{Drever}}, {{Yekta G{\"u}rsel}}, {{Seiji Kawamura}}, {{Frederick J}}. {{Raab}}, {{David Shoemaker}}, {{Lisa Sievers}}, {{Robert E}}. {{Spero}}, {{Kip S}}. {{Thorne}}, {{Rochus E}}. {{Vogt}}, {{Rainer Weiss}}, {{Stanley E}}. {{Whitcomb}}, {{Michael E}}. {{Zucker}}},
+  volume = {256},
+  number = {5055,},
+  journal = {Science, New Series},
+  year = {1992},
+  pages = {325-333},
+  file = {/Users/lorenzosperi/Zotero/storage/7AJKRD7W/1992 - LIGO The Laser Interferometer Gravitational-Wave .pdf}
+}
+
+@book{schutz_first_1985,
+	location = {Cambridge [Cambridgeshire] ; New York},
+	title = {A first course in general relativity},
+	isbn = {978-0-521-25770-1 978-0-521-27703-7},
+	pagetotal = {376},
+	publisher = {Cambridge University Press},
+	author = {Schutz, Bernard F.},
+	date = {1985},
+	langid = {english},
+	keywords = {Astrophysics, General relativity (Physics)},
+	file = {Schutz - 1985 - A first course in general relativity.pdf:/Users/lorenzosperi/Zotero/storage/5YNF26Z9/Schutz - 1985 - A first course in general relativity.pdf:application/pdf}
+}
+
+
+@article{maione_spectral_2017,
+	title = {Spectral analysis of gravitational waves from binary neutron star merger remnants},
+	volume = {96},
+	issn = {2470-0010, 2470-0029},
+	url = {http://arxiv.org/abs/1707.03368},
+	doi = {10.1103/PhysRevD.96.063011},
+	number = {6},
+	journaltitle = {Physical Review D},
+	author = {Maione, Francesco and De Pietri, Roberto and Feo, Alessandra and Löffler, Frank},
+	urldate = {2018-07-01},
+	date = {2017-09-19},
+	eprinttype = {arxiv},
+	eprint = {1707.03368},
+	keywords = {General Relativity and Quantum Cosmology},
+	annotation = {Comment: 19 pages, 6 figures},
+	file = {arXiv\:1707.03368 PDF:/Users/lorenzosperi/Zotero/storage/7IWFHYQP/Maione et al. - 2017 - Spectral analysis of gravitational waves from bina.pdf:application/pdf;arXiv.org Snapshot:/Users/lorenzosperi/Zotero/storage/4AQLSEZ9/1707.html:text/html}
+}
+
+
+@article{de_pietri_modeling_2016,
+	title = {Modeling Equal and Unequal Mass Binary Neutron Star Mergers Using Public Codes},
+	volume = {93},
+	issn = {2470-0010, 2470-0029},
+	url = {http://arxiv.org/abs/1509.08804},
+	doi = {10.1103/PhysRevD.93.064047},
+	number = {6},
+	journaltitle = {Physical Review D},
+	author = {De Pietri, Roberto and Feo, Alessandra and Maione, Francesco and Löffler, Frank},
+	urldate = {2018-03-14},
+	date = {2016-03-21},
+	eprinttype = {arxiv},
+	eprint = {1509.08804},
+	keywords = {General Relativity and Quantum Cosmology, Astrophysics - High Energy Astrophysical Phenomena}
+}
+
+
+@online{martin_notes,
+	title = {An Introduction to General Relativity, Gravitational Waves and Detection Principles},
+	author = {Martin Hendry},
+	urldate = {2018-06-30},
+	url = {http://www.astro.gla.ac.uk/~martin/teaching/gravitational-wave-detection/supa_gwd_mah.pdf}
+}
+
+@Article{Ansorg:2004ds,
+  requested-for ={EinsteinInitialData/TwoPunctures},
+  author =       {Ansorg, Marcus and Br{\"u}gmann, Bernd and Tichy,
+                  Wolfgang},
+  title =        {A single-domain spectral method for black hole
+                  puncture data},
+  journal =      {Phys. Rev. D},
+  volume =       70,
+  year =         2004,
+  pages =        064011,
+  eprint =       {arXiv:gr-qc/0404056},
+  doi =          {10.1103/PhysRevD.70.064011},
+  adsurl =
+                  {http://www.slac.stanford.edu/spires/find/hep/www?rawcmd=find+doi+10.1103/PhysRevD.70.064011},
+  SLACcitation = "%%CITATION = GR-QC/0404056;%%"
+}
+
+@Article{Brown:2008sb,
+     author =       {Brown, J. David and Diener, Peter and Sarbach,
+                     Olivier and Schnetter, Erik and Tiglio, Manuel},
+     title =        {Turduckening black holes: an analytical and
+                     computational study},
+     journal =      {Phys. Rev. D},
+     eprint =       {arXiv:0809.3533 [gr-qc]},
+     adsurl =          {http://www.slac.stanford.edu/spires/find/hep/www?rawcmd=find+doi+10.1103/PhysRevD.79.044023},
+   }
+
+@misc{EinsteinToolkit:ascl,
+  author = {{Collaborative Effort}},
+  title = {Einstein Toolkit for Relativistic Astrophysics},
+  howpublished = {Astrophysics Source Code Library},
+  year = 2011,
+  month = feb,
+  eprint = {ascl:1102.014},
+  adsurl = {http://adsabs.harvard.edu/abs/2011ascl.soft02014C},
+}
+
+@article{tichy_quasi-equilibrium_2004,
+	title = {Quasi-equilibrium binary black hole sequences for puncture data derived from helical Killing vector conditions},
+	volume = {69},
+	issn = {1550-7998, 1550-2368},
+	url = {http://arxiv.org/abs/gr-qc/0307027},
+	doi = {10.1103/PhysRevD.69.024006},
+	number = {2},
+	journaltitle = {Physical Review D},
+	author = {Tichy, Wolfgang and Bruegmann, Bernd},
+	urldate = {2018-05-15},
+	date = {2004-01-22},
+	eprinttype = {arxiv},
+	eprint = {gr-qc/0307027},
+	keywords = {General Relativity and Quantum Cosmology},
+	annotation = {Comment: 6 pages, 3 figures, 1 table},
+	file = {arXiv\:gr-qc/0307027 PDF:/Users/lorenzosperi/Zotero/storage/YIKQUMBF/Tichy e Bruegmann - 2004 - Quasi-equilibrium binary black hole sequences for .pdf:application/pdf;arXiv.org Snapshot:/Users/lorenzosperi/Zotero/storage/9L6LH467/0307027.html:text/html}
+}
+
+
+@Misc{EinsteinToolkit:web,
+  key =          {EinsteinToolkit},
+  title =        {{Einstein Toolkit}: Open software for relativistic
+                  astrophysics},
+  url =          {http://einsteintoolkit.org/},
+}
+
+@article{moesta_grhydro:_2014,
+	title = {{GRHydro}: A new open source general-relativistic magnetohydrodynamics code for the Einstein Toolkit},
+	volume = {31},
+	issn = {0264-9381, 1361-6382},
+	url = {http://arxiv.org/abs/1304.5544},
+	doi = {10.1088/0264-9381/31/1/015005},
+	shorttitle = {{GRHydro}},
+	pages = {015005},
+	number = {1},
+	journaltitle = {Classical and Quantum Gravity},
+	author = {Moesta, Philipp and Mundim, Bruno C. and Faber, Joshua A. and Haas, Roland and Noble, Scott C. and Bode, Tanja and Loeffler, Frank and Ott, Christian D. and Reisswig, Christian and Schnetter, Erik},
+	urldate = {2018-04-28},
+	date = {2014-01-07},
+	eprinttype = {arxiv},
+	eprint = {1304.5544},
+	keywords = {General Relativity and Quantum Cosmology},
+	annotation = {Comment: 58 pages, 20 figures},
+	file = {arXiv\:1304.5544 PDF:/Users/lorenzosperi/Zotero/storage/ZGYR5ZTD/Moesta et al. - 2014 - GRHydro A new open source general-relativistic ma.pdf:application/pdf;arXiv.org Snapshot:/Users/lorenzosperi/Zotero/storage/AYUF447U/1304.html:text/html}
+}
+
+@article{thorne_multipole_1980,
+	title = {Multipole expansions of gravitational radiation},
+	volume = {52},
+	url = {https://link.aps.org/doi/10.1103/RevModPhys.52.299},
+	doi = {10.1103/RevModPhys.52.299},
+	journaltitle = {Rev. Mod. Phys.},
+	author = {Thorne, Kip S.},
+	urldate = {2018-07-01},
+	date = {1980-04-01},
+}
+
+@article{newman_approach_1962,
+	title = {An Approach to Gravitational Radiation by a Method of Spin Coefficients},
+	volume = {3},
+	issn = {0022-2488},
+	url = {https://aip.scitation.org/doi/10.1063/1.1724257},
+	doi = {10.1063/1.1724257},
+	journaltitle = {Journal of Mathematical Physics},
+	author = {Newman, Ezra and Penrose, Roger},
+	urldate = {2018-07-01},
+	date = {1962-05-01},
+	file = {Snapshot:/Users/lorenzosperi/Zotero/storage/RKYS4WM9/1.html:text/html}
+}
+
+@online{noauthor_cactus_nodate,
+	title = {Cactus Code},
+	url = {http://cactuscode.org/},
+	urldate = {2018-06-30},
+	file = {Cactus Code — Welcome:/Users/lorenzosperi/Zotero/storage/VWDWAICT/cactuscode.org.html:text/html}
+}
+
 
 @article{bishop_extraction_2016,
 	title = {Extraction of Gravitational Waves in Numerical Relativity},
