--- a/latex_thesis/numerical_evolution/num_ev.tex
+++ b/latex_thesis/numerical_evolution/num_ev.tex
@@ -344,14 +344,14 @@ We plot in Figures (\ref{fourier_omega_b345}) and (\ref{fourier_omega_b6710}),on
 \dfrac{\int e^{i \omega t}  h(t,r=100 \, Mpc) \;\dd t }{\max \qty[\int e^{i \omega t}  h(t,r=100 \, Mpc) \;\dd t] }
 }
 \]
-and on the right side the angular velocity of the BBHs:
+and on the right side the orbital angular frequency of the BBHs:
 \[
 \omega = \dfrac{x \, v_y - y \,v_x}{x^{2}+y^{2}}
 \]
 where $x$ and $y$ are the coordinates of one of the BH, whereas $v_x$ and $v_y$ are the velocities along respectively the x and y axis.\\
 Figures (\ref{omega_b3}), (\ref{omega_b4}) and (\ref{omega_b5}) show that the orbital angular velocity increases more rapidly for higher values of $b$ in the last milli seconds of the simulation. 
 This aspect cannot be seen from Figures (\ref{omega_b6}), (\ref{omega_b7}) and (\ref{omega_b10}), because the simulations do not last enough for the black holes to merge. 
-However, the angular velocities of BBH-b6, BBH-b7, BBH-b10 manifest the typical oscillations that we have also noticed in the previous discussions.\\
+However, the orbital frequency of BBH-b6, BBH-b7, BBH-b10 manifest the typical oscillations that we have also noticed in the previous discussions.\\
 The Fourier transform allows us to study the range of angular frequencies of the GWs.
 In Figures (\ref{fourier_b3}), (\ref{fourier_b4}) and (\ref{fourier_b5}) it is evident a peak on an angular frequency that is approximately twice the mean value of the orbital angular frequencies of the rotating black in Figures (\ref{omega_b3}), (\ref{omega_b4}) and (\ref{omega_b5}).
 Notice that the peak is more narrow for higher values of $b$, since the initial sinusoidal behavior of the gravitational wave is more evident and longer for simulations with high $b$.\\
@@ -405,6 +405,8 @@ In general, massive objects such neutron stars could collapse under their own we
 If this happens, the gravitational wave strain manifests a ring-down phase similiar to that one of the binary black holes.
 In our case, we speculate that the binary neutron stars do not form a black hole, because they are not enough compact and they transfer matter between themselves and outwards.\\
  In order to analyze the matter distribution during the simulation, let us study the rest mass density during the time evolution of the BNS.\\
+A video of the rest mass density evolution can be downloaded at \url{https://github.com/lorenzsp/thesis/blob/master/binary_ns_video/bns.mp4}
+ \\
 In Figure (\ref{f_1234}) it is shown the intial stage of the BNS evolution.
 From Figure(\ref{f1}) it is possible to notice how the gravitational attraction between the two objects slighlty reshapes their surfaces.
 After $t = 3.83 \milli \second = 777.6 \, M _{\odot}$ the stars start tranfering matter between themselves, meanwhile a stream of matter is being ejected (Figure(\ref{f3})).\\
