--- a/latex_thesis/thesis.tex
+++ b/latex_thesis/thesis.tex
@@ -9,7 +9,7 @@
 
 %% TITLE
 \author{Lorenzo Speri}
-\title{\bf{Understanding Gravitational Waves through Numerical Simulations}}
+\title{\bf{Analyzing Gravitational Waves through Numerical Simulations of Compact Binaries}}
 \date{May 2018}
 
 %% LOAD PACKAGES
@@ -65,9 +65,11 @@ A really interesting and fascinating abstract
 \input{conclusion/conclusion.tex}
 
 \clearpage
+
+
 %% APPENDICES
-\section{Appendices}
-\input{appendix/resampling}
+%\section{Appendices}
+%\input{appendix/resampling}
 jajdc.,jdac amdadada
 \cite{taniguchiVariousFeaturesQuasiequilibrium2003}
 
