--- a/latex_thesis/introduction/intro.tex
+++ b/latex_thesis/introduction/intro.tex
@@ -31,7 +31,9 @@ x^{\sigma} = (x^{0},x^{1}, x^{2},x^{3}) = (t,\vb{x}) = (t,x,y,z)
 \]
 The four-dimensional covariant and partial derivatives will be indicated respectively with $\nabla _{\mu}$ and $\partial _\mu$.\\
 
-\textbf{Code Source}
-The codes used for the numerical simulations, the scripts for the data analysis and and the scripts used to generate the Figures are available at the website\\
-\url{}
+\textbf{Codes and Data}\\
+The codes used for the numerical simulations, the scripts for the data analysis and and the scripts used to generate the figures are available at the website
+\\
+\url{https://github.com/lorenzsp/thesis}
+\\
 In addition, we have also included the data produced by the simulations in order to reproduce all the results that we have reported in this paper. 
